# coppeliaSimClientPython

./: CMakeLists.txt  commandLineOptions.py  coppeliaSim.py  coppeliaSimLib.py  coppeliaSimLib_bridge.py  coppeliaSim_noUI.py  license.txt  main.py  main_with_ui.cpp  main_with_ui.py
coppeliaSim/: bridge.py  commandLineOptions.py  lib.py
coppeliasim/: bridge.py  callback.py  cmdopt.py  lib.py  stack.py
tests/: coppeliaSim.py  ompl-callback.py  ompl-callback.ttt  testScene.ttt  various.py  various.ttt
